--- a/contrast.html
+++ b/contrast.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibility Contrast</title>
@@ -17,6 +18,7 @@
 
     <div class="content">
       <section>
+      <h1><center>Accessibility Contrast</center></h1>
       <p>
       <table>
       <caption><h2>Examples of good and poor contrast</h2></caption>
