Fix headings accessibility.
Add first heading, a page language, and alternative text for internship
image.

--- a/headings.html
+++ b/headings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Accessibily Headings</title>
@@ -16,14 +17,13 @@
 
     <div class="content">
       <center>
+      <h1><strong>Application Form</strong></h1>
       <b>Utah State University<br>
       Washington DC Internship Program<br>
       US Congress, Washington DC, USA</b>
       <br />
-      <p><img src="https://usueastern.edu/price/internships/_images/internship.jpg"></p>
+      <p><img src="https://usueastern.edu/price/internships/_images/internship.jpg" alt="College students studying"></p>
       </center>
-
-      <p><strong>Application Form</strong></p>
 
       <p>
         <strong>DUE DATE: Wednesday 26 December 2016</strong><br>
